--- a/Aplicacion/Vista/componentes/usuario.phtml
+++ b/Aplicacion/Vista/componentes/usuario.phtml
@@ -48,19 +48,20 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="user-name">Nombre Usuario <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
+								<input type="hidden" id="user-id" name="user-id" placeholder="iduser" class="form-control col-md-7 col-xs-12">
 								<input type="text" id="user-name" name="user-name" required="required" placeholder="ej. fcabezasr" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="password">Contraseña <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="password" id="password" name="password" required="required" class="form-control col-md-7 col-xs-12">
+								<input type="password" id="password" name="password" required="required" placeholder="******" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="repeat-password">Repita Contraseña <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="password" id="repeat-password" name="repeat-password" required="required" class="form-control col-md-7 col-xs-12">
+								<input type="password" id="repeat-password" name="repeat-password" required="required" placeholder="******" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
@@ -84,7 +85,7 @@
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-								<button class="btn btn-primary" id="btn-reset-user" type="reset">Limpiar</button>
+								<button class="btn btn-primary" id="btn-reset" type="reset">Limpiar</button>
 								<button class="btn btn-success" id="btn-guardar-user" type="button">Guardar</button>
 							</div>
 						</div>
@@ -102,51 +103,10 @@
 					</ul>
 					<div class="clearfix"></div>
 				</div>
-				<div class="x_content">					
-					<table id="table-user" class="table table-striped table-bordered" cellspacing="0" width="100%">
-				        <thead>
-				            <tr>
-				                <th>N°</th>
-				                <th>Usuario</th>
-				                <th>Tipo</th>
-				                <th>Empresa</th>
-				                <th>Fecha Registro</th>
-				                <th>Estado</th>
-				                <th>Acciones</th>
-				            </tr>
-				        </thead>
-				        <tbody>
-				            <tr>
-				                <td class="td-center">1</td>
-				                <td class="td-center">Tiger</td>
-				                <td class="td-center">Architect</td>
-				                <td class="td-center">Retailcs</td>
-				                <td class="td-center">2011/04/25</td>
-				                <td class="td-center">Habilitado</td>
-				                <td class="td-center">
-									<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-pencil"></i></button>
-				                	<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-				                </td>
-				            </tr>
-				            <tr>
-				                <td class="td-center">2</td>
-				                <td class="td-center">Tiger</td>
-				                <td class="td-center">Architect</td>
-				                <td class="td-center">Retailcs</td>
-				                <td class="td-center">2011/04/25</td>
-				                <td class="td-center">Deshabilitado</td>
-				                <td class="td-center">
-									<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-pencil"></i></button>
-				                	<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-				                </td>
-				            </tr>
-				        </tbody>
-				    </table>
-					<script>
-					  	$(document).ready(function() {
-							$('#table-user').DataTable();
-					  	});
-					</script>
+				<div class="x_content" id="content-table-user">
+
+					<?php echo $tableUser; ?>
+								
 				</div>
 			</div>
 
@@ -167,13 +127,14 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="description-type">Descripción <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="description-type" name="description-type" required="required" placeholder="" class="form-control col-md-7 col-xs-12">
+								<input type="hidden" id="user-idtype" name="user-idtype" placeholder="idtypeuser" class="form-control col-md-7 col-xs-12">
+								<input type="text" id="description-type" name="description-type" required="required" placeholder="ej. admin" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-								<button class="btn btn-primary" id="btn-reset-type-user" type="reset">Limpiar</button>
+								<button class="btn btn-primary" id="btn-reset" type="reset">Limpiar</button>
 								<button class="btn btn-success" id="btn-guardar-type-user" type="button">Guardar</button>
 							</div>
 						</div>
@@ -191,35 +152,10 @@
 					</ul>
 					<div class="clearfix"></div>
 				</div>
-				<div class="x_content">					
-					<table id="table-type-user" class="table table-striped table-bordered" cellspacing="0" width="100%">
-				        <thead>
-				            <tr>
-				            	<th>N°</th>
-				                <th>Descripción</th>
-				                <th>Fecha Registro</th>
-				                <th>Estado</th>
-				                <th>Acciones</th>
-				            </tr>
-				        </thead>
-				        <tbody>
-				            <tr>
-				            	<td class="td-center">1</td>
-				                <td class="td-center">Edinburgh</td>
-				                <td class="td-center">2011/04/25</td>
-				                <td class="td-center">Habilitado</td>
-				                <td class="td-center">
-									<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-pencil"></i></button>
-				                	<button class="btn btn-default" id="" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-				                </td>
-				            </tr>
-				        </tbody>
-				    </table>
-					<script>
-					  	$(document).ready(function() {
-							$('#table-type-user').DataTable();
-					  	});
-					</script>
+				<div class="x_content" id="content-table-type-user">
+
+					<?php echo $tableTypeUser; ?>
+
 				</div>
 			</div>
 
